--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,16 @@
     <meta name="description" content="Weather App" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Dosis:wght@200;300;400;500;600;700&family=Roboto+Condensed:wght@300;400;700&family=Roboto:wght@100;300;500;700&display=swap"
+      rel="stylesheet"
+    />
+    <script
+      src="https://kit.fontawesome.com/eff8c6a9c0.js"
+      crossorigin="anonymous"
+    ></script>
     <title>React Weather App</title>
   </head>
   <body>
